--- a/.github/workflows/ain10-long.yml
+++ b/.github/workflows/ain10-long.yml
@@ -3,25 +3,23 @@ name: Generate long-term charts (1d/7d/1m/1y + stats + intraday)
 on:
   workflow_dispatch:
   schedule:
-    # 毎日 20:15 UTC（必要に応じて変更）
+    # UTC
     - cron: "15 20 * * *"
 
 permissions:
   contents: write
 
-# 並行実行の衝突を避ける
 concurrency:
   group: long-charts-${{ github.ref }}
   cancel-in-progress: false
 
 env:
-  # このリポのインデックスキー
   INDEX_KEY: ain10
 
 jobs:
   build:
     runs-on: ubuntu-latest
-    timeout-minutes: 15
+    timeout-minutes: 20
 
     steps:
       - name: Checkout
@@ -44,10 +42,10 @@ jobs:
           elif [ -f src/requirements.txt ]; then
             pip install -r src/requirements.txt
           else
-            pip install pandas numpy matplotlib pytz
+            pip install pandas numpy matplotlib
           fi
 
-      # 1d/7d/1m/1y の画像・CSVを docs/outputs へ生成
+      # 1d/7d/1m/1y の画像・CSVなどを docs/outputs に生成
       - name: Generate long-term charts
         env:
           INDEX_KEY: ${{ env.INDEX_KEY }}
@@ -57,7 +55,7 @@ jobs:
           echo "---- LIST AFTER CHARTS ----"
           ls -al docs/outputs || true
 
-      # 1日騰落率（open→latest などの基準）を計算して投稿文/JSONを書き出し
+      # 前日終値を基準に 1日騰落率を計算。history が無い/0付近の場合は安全にフォールバック
       - name: Compute 1d percent & write posts
         env:
           INDEX_KEY: ${{ env.INDEX_KEY }}
@@ -65,12 +63,12 @@ jobs:
           set -e
           python scripts/ain10_pct_post.py \
             --index-key "${INDEX_KEY}" \
-            --csv "docs/outputs/${INDEX_KEY}_1d.csv" \
+            --csv      "docs/outputs/${INDEX_KEY}_1d.csv" \
+            --history  "docs/outputs/${INDEX_KEY}_history.csv" \
+            --basis    "prev_close" \
             --out-json "docs/outputs/${INDEX_KEY}_stats.json" \
-            --out-text "docs/outputs/${INDEX_KEY}_post_intraday.txt" \
-            --basis open
+            --out-text "docs/outputs/${INDEX_KEY}_post_intraday.txt"
 
-      # デバッグ用に成果物を保存（任意）
       - name: Upload artifacts (for debug)
         if: always()
         uses: actions/upload-artifact@v4
@@ -78,28 +76,33 @@ jobs:
           name: outputs
           path: docs/outputs
 
-      # 生成物のコミット
       - name: Commit charts if changed
         run: |
           set -e
           git config user.name  "github-actions[bot]"
           git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
 
-          # 画像
+          # images
           git add docs/outputs/${{ env.INDEX_KEY }}_1d.png || true
           git add docs/outputs/${{ env.INDEX_KEY }}_7d.png || true
           git add docs/outputs/${{ env.INDEX_KEY }}_1m.png || true
           git add docs/outputs/${{ env.INDEX_KEY }}_1y.png || true
+          git add docs/outputs/${{ env.INDEX_KEY }}_intraday.png || true
 
-          # CSV（存在すれば）
+          # csv
           git add docs/outputs/${{ env.INDEX_KEY }}_1d.csv || true
           git add docs/outputs/${{ env.INDEX_KEY }}_7d.csv || true
           git add docs/outputs/${{ env.INDEX_KEY }}_1m.csv || true
           git add docs/outputs/${{ env.INDEX_KEY }}_1y.csv || true
+          git add docs/outputs/${{ env.INDEX_KEY }}_intraday.csv || true
+          git add docs/outputs/${{ env.INDEX_KEY }}_history.csv || true
 
-          # 投稿テキスト・統計
-          git add docs/outputs/${{ env.INDEX_KEY }}_post_intraday.txt || true
+          # posts & stats
           git add docs/outputs/${{ env.INDEX_KEY }}_stats.json || true
+          git add docs/outputs/${{ env.INDEX_KEY }}_post.txt || true
+          git add docs/outputs/${{ env.INDEX_KEY }}_post_intraday.txt || true
+          git add docs/outputs/${{ env.INDEX_KEY }}_intraday_post.txt || true
+          git add docs/outputs/${{ env.INDEX_KEY }}_post_*.txt || true
 
           if git diff --cached --quiet; then
             echo "No chart/stat updates."
