--- a/.github/workflows/ain10-long.yml
+++ b/.github/workflows/ain10-long.yml
@@ -76,8 +76,8 @@ jobs:
           echo "=== ls -la docs/outputs (after) ==="
           ls -la docs/outputs || true
 
-      # ───────── 1d 騰落率（自動基準: open or stable@10:00） ─────────
-      - name: Compute 1d percent & write posts
+      # ───────── 1d 騰落率（より堅め: open を基準） ─────────
+      - name: Compute 1d percent & write posts (from 1d.csv)
         run: |
           set -euxo pipefail
           echo "=== MARKER: pct_post step will run ==="
@@ -86,12 +86,29 @@ jobs:
             --csv "${OUT_DIR}/${INDEX_KEY}_1d.csv" \
             --out-json "${OUT_DIR}/${INDEX_KEY}_stats.json" \
             --out-text "${OUT_DIR}/${INDEX_KEY}_post_intraday.txt" \
-            --basis auto
+            --basis open
           echo "=== MARKER: pct_post finished ==="
-          echo "--- ${INDEX_KEY}_post_intraday.txt ---"
+          echo "--- ${INDEX_KEY}_post_intraday.txt (from 1d.csv) ---"
           sed -n '1p' "${OUT_DIR}/${INDEX_KEY}_post_intraday.txt" || true
           echo "--- ${INDEX_KEY}_stats.json ---"
           head -c 400 "${OUT_DIR}/${INDEX_KEY}_stats.json" || true
+          echo
+
+      # ───────── intraday テキスト（intraday.csv をソースに上書き生成） ─────────
+      - name: Make intraday post (from intraday.csv)
+        run: |
+          set -euxo pipefail
+          test -f scripts/make_intraday_post.py || (echo "scripts/make_intraday_post.py NOT FOUND" && exit 3)
+          if [ -f "${OUT_DIR}/${INDEX_KEY}_intraday.csv" ]; then
+            python scripts/make_intraday_post.py \
+              --index-key "${INDEX_KEY}" \
+              --csv "${OUT_DIR}/${INDEX_KEY}_intraday.csv" \
+              --out-text "${OUT_DIR}/${INDEX_KEY}_post_intraday.txt"
+            echo "--- ${INDEX_KEY}_post_intraday.txt (from intraday.csv) ---"
+            sed -n '1p' "${OUT_DIR}/${INDEX_KEY}_post_intraday.txt" || true
+          else
+            echo "WARN: ${OUT_DIR}/${INDEX_KEY}_intraday.csv not found, skipped intraday post."
+          fi
           echo
 
       - name: Upload artifacts (for debug)
