--- a/.github/workflows/ain10-long.yml
+++ b/.github/workflows/ain10-long.yml
@@ -1,9 +1,10 @@
+# 省略せずにこのまま置き換え
+
 name: AIN-10 • long charts & intraday percent (diag)
 
 on:
   workflow_dispatch:
   schedule:
-    # 平日 09:00–17:30 JST（= 00:00–08:30 UTC）に10分おき
     - cron: "*/10 0-8 * * 1-5"
 
 permissions:
@@ -76,25 +77,23 @@ jobs:
           echo "=== ls -la docs/outputs (after) ==="
           ls -la docs/outputs || true
 
-      # ───────── 1d 騰落率（確定系。先に書く） ─────────
+      # ───────── 1d（確定系） ─────────
       - name: Compute 1d percent & write posts (from 1d.csv)
         run: |
           set -euxo pipefail
-          echo "=== MARKER: pct_post step will run ==="
           python scripts/ain10_pct_post.py \
             --index-key "${INDEX_KEY}" \
             --csv "${OUT_DIR}/${INDEX_KEY}_1d.csv" \
             --out-json "${OUT_DIR}/${INDEX_KEY}_stats.json" \
             --out-text "${OUT_DIR}/${INDEX_KEY}_post_intraday.txt" \
             --basis open
-          echo "=== MARKER: pct_post finished ==="
           echo "--- ${INDEX_KEY}_post_intraday.txt (from 1d.csv) ---"
           sed -n '1p' "${OUT_DIR}/${INDEX_KEY}_post_intraday.txt" || true
           echo "--- ${INDEX_KEY}_stats.json (1d-based) ---"
           head -c 400 "${OUT_DIR}/${INDEX_KEY}_stats.json" || true
           echo
 
-      # ───────── intraday（速報系）。サイト用 stats.json を intraday で上書き ─────────
+      # ───────── intraday（速報系で上書き） ─────────
       - name: Make intraday post (from intraday.csv)
         run: |
           set -euxo pipefail
@@ -106,6 +105,11 @@ jobs:
               --out-json "${OUT_DIR}/${INDEX_KEY}_stats.json"
             echo "--- ${INDEX_KEY}_post_intraday.txt (from intraday.csv) ---"
             sed -n '1p' "${OUT_DIR}/${INDEX_KEY}_post_intraday.txt" || true
+            # レガシー名も出力されているか確認
+            if [ -f "${OUT_DIR}/ain_10_post_intraday.txt" ]; then
+              echo "--- ain_10_post_intraday.txt (legacy alias) ---"
+              sed -n '1p' "${OUT_DIR}/ain_10_post_intraday.txt" || true
+            fi
             echo "--- ${INDEX_KEY}_stats.json (intraday-based override) ---"
             head -c 400 "${OUT_DIR}/${INDEX_KEY}_stats.json" || true
           else
